<resources>
    <string name="app_name">MySchoolLife</string>
    <string name="startovoe_no_act">Start \n a new game</string>
    <string name="startovoe_memory">Memories</string>


    <string name="next">Continue</string>
    <string name="back">Back</string>

    <string name="privie_days"> The color designation of the level icon: \n green - the level is passed \n gray - the level will soon be ready to pass \n white - the level can be passed</string>
    <string name="privietext">MySchoolLife\n is a game about the best years of your life. \n Try to feel happy again by playing this game.\n During the game:\n It is possible to conduct dialogues with characters.\n Improve your skills and abilities.\To fulfill requests.\n And much more, everything is like in real life.</string>
    <string name="hold">This part of the story\nwill be revealed soon.</string>
    <string name="Hold_back">To return</string>
    <string name="next_day">The next day</string>


    <string name="day_1_sleep">Get some more sleep</string>
    <string name="day_1_awake">Get out of bed</string>


    <string name="test_start">Start the Test</string>
    <string name="test_variant">Variant: 1</string>
    <string name="test_result">Answer:</string>
    <string name="pls_input">Enter the data</string>
    <string name="test_end">Finish the test</string>

    <string name="day2_teacher_1_1">Так,</string>
    <string name="day2_teacher_1_2">, ваша очередь.</string>

    <string name="char_name">Name:</string>
    <string name="char_family">Surname:</string>
    <string name="char_creation">Character Creation</string>
    <string name="char_creation_gender">Choose a gender</string>
    <string name="char_creation_gender_Woman">W</string>
    <string name="char_creation_gender_Man">M</string>
    <string name="char_creation_name_text">Come up with a name and surname for your character</string>
    <string name="char_creation_name">Enter a name</string>
    <string name="char_creation_family">Enter surname</string>


</resources>