<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/character_creation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/beliy_fon" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/creation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_button_azure_r50"
                android:minWidth="1000dp"
                android:minHeight="48dp"
                android:gravity="center"
                android:text="@string/char_creation"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/gender_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/char_creation_gender"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/button_gender"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/style_button_gray"
                    android:gravity="center"
                    android:textOff="@string/char_creation_gender_Man"
                    android:textOn="@string/char_creation_gender_Woman" />


            </LinearLayout>

            <TextView
                android:id="@+id/enter_name"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/char_creation_name_text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/char_name"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/char_name"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="53dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/style_gray"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20sp"
                    android:text="@string/char_family" />

                <EditText
                    android:id="@+id/char_family"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/style_gray"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back_char"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/button_press_white_r50_azur"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_current_day"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/button_press_white_r50_azur"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>