<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Day1_man">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/beliy_fon" />


    <ImageView
        android:id="@+id/day_1_kartinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="174dp"
        android:src="@drawable/day1_scr1_ru"
        android:visibility="visible" />

    <Button
        android:id="@+id/day_1_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="180dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:text="@string/day_1_sleep"
        android:textColor="@color/black"
        android:visibility="visible" />

    <Button
        android:id="@+id/day_1_awake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="179dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:text="@string/day_1_awake"
        android:textColor="@color/black"
        android:visibility="visible" />

    <Button
        android:id="@+id/test_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="147dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:text="@string/test_start"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <Button
        android:id="@+id/day1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="102dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btngo_day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/next_day"
        android:textColor="@color/black"
        android:visibility="invisible" />


</RelativeLayout>