<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Day2_man">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/beliy_fon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/day2_man" />

    <TextView
        android:id="@+id/day2_teacher_1_1"
        android:layout_width="561dp"
        android:layout_height="93dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="120dp"
        android:paddingTop="30dp"
        android:text="@string/day2_teacher_1_1"
        android:textColor="@color/yeloww"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/day2_teacher_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/day2_teacher_1_2" />

    <Button
        android:id="@+id/day2_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/style_button_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:visibility="visible" />
</RelativeLayout>