<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/startovoe_fon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/startovoe_fon" />

    <Button
        android:id="@+id/button_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_press_white_r50_azur"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/startovoe_memory"
        android:textColor="@color/black"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_current_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="135dp"
        android:background="@drawable/button_press_white_r50_azur"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/startovoe_no_act"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:visibility="visible" />


</RelativeLayout>