<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogtest"
    android:background="@drawable/beliy_fon"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp">

    <ScrollView
        android:id="@+id/Test_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/testik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/test_char_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/char_name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/test_char_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/char_family"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/test_variant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/test_variant" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/test_task1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/test_result"/>

                    <EditText
                        android:id="@+id/input_task1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/style_gray"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:inputType="number" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/test_task2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/test_result" />

                    <EditText
                        android:id="@+id/input_task2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_gray"
                        android:layout_marginLeft="20dp"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:inputType="number" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/test_task3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/test_result" />

                    <EditText
                        android:id="@+id/input_task3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_gray"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:layout_marginLeft="20dp"
                        android:inputType="number" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/test_task4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/test_result" />

                    <EditText
                        android:id="@+id/input_task4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_gray"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:layout_marginLeft="20dp"
                        android:inputType="number" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/test_task5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/test_result" />

                    <EditText
                        android:id="@+id/input_task5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_gray"
                        android:ems="10"
                        android:textColor="@color/black"
                        android:layout_marginLeft="20dp"
                        android:inputType="number" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/test1_task6_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_result"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/input_task6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/style_gray"
                        android:ems="10"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </LinearLayout>

                <Button
                    android:id="@+id/test_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/style_button_azure_r50"
                    android:text="@string/test_end" />

            </LinearLayout>
        </ScrollView>
    </ScrollView>

</LinearLayout>